--- a/www/index.html
+++ b/www/index.html
@@ -63,20 +63,20 @@
       <div role="main" class="ui-content">
         <form id="addContactForm">
           <div data-role="fieldcontain">
-            <label for="addName">Nom complet:</label>
+            <label for="addName">Nom complet</label>
             <input type="text" id="addName" placeholder="Nom complet" required>
           </div>
           <div data-role="fieldcontain">
-            <label for="addPhone">Telephone:</label>
-            <input type="tel" id="addPhone" placeholder="Numero de telephone" required>
+            <label for="addPhone">Telephone</label>
+            <input type="tel" id="addPhone" placeholder="Telephone" required>
           </div>
           <div data-role="fieldcontain">
-            <label for="addEmail">Email:</label>
-            <input type="email" id="addEmail" placeholder="Adresse email">
+            <label for="addEmail">Email</label>
+            <input type="email" id="addEmail" placeholder="Email">
           </div>
           <div data-role="fieldcontain">
-            <label for="addOrganization">Organisation:</label>
-            <input type="text" id="addOrganization" placeholder="Entreprise/Organisation">
+            <label for="addOrganization">Organisation</label>
+            <input type="text" id="addOrganization" placeholder="Entreprise">
           </div>
         </form>
       </div>
@@ -94,20 +94,20 @@
       <div role="main" class="ui-content">
         <form id="editContactForm">
           <div data-role="fieldcontain">
-            <label for="editName">Nom complet:</label>
+            <label for="editName">Nom complet</label>
             <input type="text" id="editName" placeholder="Nom complet" required>
           </div>
           <div data-role="fieldcontain">
-            <label for="editPhone">Telephone:</label>
-            <input type="tel" id="editPhone" placeholder="Numero de telephone" required>
+            <label for="editPhone">Telephone</label>
+            <input type="tel" id="editPhone" placeholder="Telephone" required>
           </div>
           <div data-role="fieldcontain">
-            <label for="editEmail">Email:</label>
-            <input type="email" id="editEmail" placeholder="Adresse email">
+            <label for="editEmail">Email</label>
+            <input type="email" id="editEmail" placeholder="Email">
           </div>
           <div data-role="fieldcontain">
-            <label for="editOrganization">Organisation:</label>
-            <input type="text" id="editOrganization" placeholder="Entreprise/Organisation">
+            <label for="editOrganization">Organisation</label>
+            <input type="text" id="editOrganization" placeholder="Entreprise">
           </div>
         </form>
       </div>
